fix scrollbar not showing the spec in example

--- a/src/components/ids-about/ids-about.scss
+++ b/src/components/ids-about/ids-about.scss
@@ -35,7 +35,7 @@
     border-radius: var(--ids-border-radius-xxs);
     max-height: 199px;
     outline: 0;
-    overflow: auto;
+    overflow: auto !important;
     text-align: left;
     scroll-behavior: smooth;
 
